# samer-django

./: .env.example  .gitignore  README.md  pyproject.toml
samer/: __init__.py  celery_samer.py  manage.py  populate.py  utils.py
samer/home/: forms.py  models.py  tests.py  urls.py  views.py
samer/middleware/: auth_middleware.py
samer/posts/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
samer/questions/: forms.py  models.py  tasks.py  urls.py  views.py
samer/root/: forms.py  urls.py  utils.py  views.py
samer/samerproject/: asgi.py  converters.py  settings.py  urls.py  wsgi.py
samer/samerproject/settings/: base.py  local.py  prod.py
samer/static/css/: base.css  carousel.css  comment.css  home.css  login.css  profile.css  questions.css  root.css  root_posts.css  videos.css
samer/static/css/root/: base.css  user.css
samer/static/javascript/: base.js  carousel.js  comment.js  profile.js  questions.js  upload_post.js
samer/templates/: base.html
samer/templates/home/: home.html  images.html  profile.html  videos.html
samer/templates/posts/: comment.html  image.html  video.html
samer/templates/questions/: create.html  question.html  questions.html  questions_content.html
samer/templates/root/: post.html  root.html  upload_post.html
samer/templates/root/posts/: create.html  edit.html  post.html  posts.html
samer/templates/root/questions/: create_answer.html  question.html
samer/templates/users/: login.html  signin.html
samer/users/: context_processors.py  forms.py  hashing.py  models.py  urls.py  views.py
tests/: test_utils.py
(+5 files in other folders)
