[tool.poetry]
name = "samer"
version = "0.1.0"
description = ""
authors = ["Joaquin Martin <jmartinacu2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pymongo = "^4.7.3"
dnspython = "^2.6.1"
pylint = "^3.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
boto3 = "^1.34.132"
bcrypt = "^4.1.3"
pillow = "^10.4.0"
python-magic = "^0.4.27"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
